--- a/fastapi_backend/requirements.txt
+++ b/fastapi_backend/requirements.txt
@@ -1,8 +1,60 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic[email]==2.5.0
-python-multipart==0.0.6
+# =============================================================================
+# Balance Tracking System - Working Dependencies (No Conflicts)
+# Tested compatible versions for Python 3.9+
+# =============================================================================
+
+# Core FastAPI Stack (Compatible versions)
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+pydantic==2.8.0
+pydantic[email]==2.8.0
+
+# Form handling
+python-multipart==0.0.16
+
+# Environment configuration
+python-decouple==3.8
+
+# Authentication & Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-decouple==3.8
+
+# Database
+sqlalchemy==2.0.36
+psycopg2-binary==2.9.10
+alembic==1.14.0
+
+# HTTP client
+httpx==0.28.1
+
+# Input validation
+validators==0.33.0
+bleach==6.2.0
+
+# Rate limiting
+slowapi==0.1.9
+
+# AWS Services (SES Email)
+boto3==1.35.80
+botocore==1.35.80
+
+# Logging
+structlog==24.5.0
+
+# Development & Testing (Optional - install separately if needed)
+# pytest==8.3.4
+# pytest-asyncio==0.24.0
+# black==24.10.0
+# mypy==1.13.0
+
+# =============================================================================
+# INSTALLATION NOTES:
+# =============================================================================
+# 1. This avoids the packaging version conflicts
+# 2. Uses latest FastAPI with Pydantic 2.x support
+# 3. All versions tested to work together
+# 4. Development tools commented out to avoid conflicts
+#
+# Install development tools separately if needed:
+# pip install pytest pytest-asyncio black mypy
+# =============================================================================
