--- a/fastapi_backend/.env
+++ b/fastapi_backend/.env
@@ -32,10 +32,12 @@ VERSION=1.0.0-dev
 CORS_ORIGINS=http://localhost:3000,http://localhost:8080,http://127.0.0.1:3000
 CORS_ALLOW_CREDENTIALS=true
 
-# Rate Limiting (Relaxed for development)
-RATE_LIMIT_ENABLED=false
-RATE_LIMIT_REQUESTS_PER_MINUTE=1000
-RATE_LIMIT_BURST=50
+# Rate Limiting (RYelaxed for development)
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_AUTH_REQUESTS=10
+RATE_LIMIT_TRADING_REQUESTS=100
+RATE_LIMIT_INFO_REQUESTS=200
+RATE_LIMIT_ADMIN_REQUESTS=5
 
 # Email Configuration (Development - Disabled)
 EMAIL_ENABLED=false
@@ -72,3 +74,7 @@ LOG_FILE_PATH=logs/app.log
 # Monitoring
 HEALTH_CHECK_ENABLED=true
 METRICS_ENABLED=true
+
+# Security Configuration
+MAX_REQUEST_SIZE=10485760
+REQUEST_TIMEOUT=30
