--- a/fastapi_backend/.env
+++ b/fastapi_backend/.env
@@ -78,3 +78,82 @@ METRICS_ENABLED=true
 # Security Configuration
 MAX_REQUEST_SIZE=10485760
 REQUEST_TIMEOUT=30
+
+# Add these Redis settings to your .env files
+
+# ============================================
+# DEVELOPMENT ENVIRONMENT (.env)
+# ============================================
+
+# Rate Limiting with Redis (NEW - Task 1.4.B)
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_REDIS_URL=redis://localhost:6379/0
+RATE_LIMIT_FALLBACK_TO_MEMORY=true
+
+# Endpoint-Specific Rate Limits
+RATE_LIMIT_AUTH_REQUESTS=10
+RATE_LIMIT_TRADING_REQUESTS=100
+RATE_LIMIT_INFO_REQUESTS=200
+RATE_LIMIT_ADMIN_REQUESTS=5
+
+# Advanced Rate Limiting Features
+RATE_LIMIT_SLIDING_WINDOW=true
+RATE_LIMIT_BURST_PROTECTION=true
+RATE_LIMIT_ADMIN_BYPASS=true
+
+# Redis Connection Settings
+REDIS_POOL_SIZE=10
+REDIS_TIMEOUT=5.0
+REDIS_HEALTH_CHECK_INTERVAL=30
+
+# ============================================
+# PRODUCTION ENVIRONMENT (production .env)
+# ============================================
+
+# Rate Limiting with Redis (Production)
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_REDIS_URL=redis://prod-redis.yourdomain.com:6379/0
+RATE_LIMIT_FALLBACK_TO_MEMORY=true
+
+# Endpoint-Specific Rate Limits (Stricter for Production)
+RATE_LIMIT_AUTH_REQUESTS=5
+RATE_LIMIT_TRADING_REQUESTS=50
+RATE_LIMIT_INFO_REQUESTS=100
+RATE_LIMIT_ADMIN_REQUESTS=3
+
+# Advanced Rate Limiting Features
+RATE_LIMIT_SLIDING_WINDOW=true
+RATE_LIMIT_BURST_PROTECTION=true
+RATE_LIMIT_ADMIN_BYPASS=true
+
+# Redis Connection Settings (Production)
+REDIS_POOL_SIZE=20
+REDIS_TIMEOUT=3.0
+REDIS_HEALTH_CHECK_INTERVAL=30
+
+# ============================================
+# STAGING ENVIRONMENT (staging .env)
+# ============================================
+
+# Rate Limiting with Redis (Staging)
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_REDIS_URL=redis://staging-redis.yourdomain.com:6379/0
+RATE_LIMIT_FALLBACK_TO_MEMORY=true
+
+# Endpoint-Specific Rate Limits (Production-like)
+RATE_LIMIT_AUTH_REQUESTS=8
+RATE_LIMIT_TRADING_REQUESTS=75
+RATE_LIMIT_INFO_REQUESTS=150
+RATE_LIMIT_ADMIN_REQUESTS=5
+
+# Advanced Rate Limiting Features
+RATE_LIMIT_SLIDING_WINDOW=true
+RATE_LIMIT_BURST_PROTECTION=true
+RATE_LIMIT_ADMIN_BYPASS=true
+
+# Redis Connection Settings (Staging)
+REDIS_POOL_SIZE=15
+REDIS_TIMEOUT=4.0
+REDIS_HEALTH_CHECK_INTERVAL=30
+RATE_LIMIT_REDIS_URL=redis://localhost:6379/0
+RATE_LIMIT_FALLBACK_TO_MEMORY=true
