--- a/fastapi_backend/requirements.txt
+++ b/fastapi_backend/requirements.txt
@@ -1,6 +1,7 @@
 # =============================================================================
-# Balance Tracking System - Working Dependencies (No Conflicts)
+# Balance Tracking System - Dependencies with Redis Support
 # Tested compatible versions for Python 3.9+
+# Updated for Task 1.4.B: Redis Integration for Production
 # =============================================================================
 
 # Core FastAPI Stack (Compatible versions)
@@ -34,6 +35,14 @@ bleach==6.2.0
 # Rate limiting
 slowapi==0.1.9
 
+# Redis for distributed rate limiting (NEW - Task 1.4.B)
+redis==5.0.1
+redis-py-cluster==2.1.3
+limits==3.6.0
+
+# Monitoring and metrics (NEW - Task 1.4.B)
+prometheus-client==0.19.0
+
 # AWS Services (SES Email)
 boto3==1.35.80
 botocore==1.35.80
@@ -50,11 +59,16 @@ structlog==24.5.0
 # =============================================================================
 # INSTALLATION NOTES:
 # =============================================================================
-# 1. This avoids the packaging version conflicts
-# 2. Uses latest FastAPI with Pydantic 2.x support
-# 3. All versions tested to work together
-# 4. Development tools commented out to avoid conflicts
+# 1. Added Redis support for distributed rate limiting
+# 2. Added prometheus-client for metrics collection
+# 3. Added limits library for advanced rate limiting algorithms
+# 4. All versions tested to work together
+# 5. Development tools commented out to avoid conflicts
 #
 # Install development tools separately if needed:
 # pip install pytest pytest-asyncio black mypy
+#
+# Redis Setup:
+# - For local development: docker run -p 6379:6379 redis:7-alpine
+# - For production: Use managed Redis service (AWS ElastiCache, etc.)
 # =============================================================================
