--- a/fastapi_backend/.env
+++ b/fastapi_backend/.env
@@ -157,3 +157,10 @@ REDIS_TIMEOUT=4.0
 REDIS_HEALTH_CHECK_INTERVAL=30
 RATE_LIMIT_REDIS_URL=redis://localhost:6379/0
 RATE_LIMIT_FALLBACK_TO_MEMORY=true
+RATE_LIMIT_REDIS_URL=redis://localhost:6379/0
+RATE_LIMIT_FALLBACK_TO_MEMORY=true
+RATE_LIMIT_REQUESTS_PER_MINUTE=60
+RATE_LIMIT_AUTH_REQUESTS=10
+RATE_LIMIT_TRADING_REQUESTS=100
+RATE_LIMIT_INFO_REQUESTS=200
+RATE_LIMIT_ADMIN_REQUESTS=5
