--- a/fastapi_backend/.env.backup.20250711_080035
+++ b/fastapi_backend/.env.backup.20250711_080035
@@ -1,7 +1,7 @@
 # =============================================================================
-# Redis-Optimized Environment Configuration (Fixed)
-# Updated: 2025-07-11 08:00:35
-# Task 1.2: Redis Production Setup - Redis Integration Fix
+# Redis-Optimized Environment Configuration (Native Redis)
+# Updated: Thu Jul 10 21:27:38 CDT 2025
+# Task 1.2: Redis Production Setup Complete
 # =============================================================================
 
 # Environment
@@ -34,27 +34,11 @@ VERSION=1.0.0-dev
 CORS_ORIGINS=http://localhost:3000,http://localhost:8080,http://127.0.0.1:3000
 CORS_ALLOW_CREDENTIALS=true
 
-# ===== REDIS CONFIGURATION - FIXED FOR PROPER INTEGRATION =====
-# Enable rate limiting
-RATE_LIMIT_ENABLED=true
+# Redis Configuration - NATIVE REDIS SETUP
 
-# Redis connection (Database 1 for rate limiting)
-RATE_LIMIT_REDIS_URL=redis://localhost:6379/1
-
-# CRITICAL: Disable fallback to force Redis usage
-RATE_LIMIT_FALLBACK_TO_MEMORY=false
-
-# Endpoint-Specific Rate Limits (Conservative for testing)
-RATE_LIMIT_AUTH_REQUESTS=5
-RATE_LIMIT_TRADING_REQUESTS=10
-RATE_LIMIT_INFO_REQUESTS=15
-RATE_LIMIT_ADMIN_REQUESTS=3
-RATE_LIMIT_REQUESTS_PER_MINUTE=20
+# Endpoint-Specific Rate Limits (Development)
 
 # Advanced Rate Limiting Features
-RATE_LIMIT_SLIDING_WINDOW=true
-RATE_LIMIT_BURST_PROTECTION=true
-RATE_LIMIT_ADMIN_BYPASS=false
 
 # Redis Connection Settings
 REDIS_POOL_SIZE=10
@@ -87,3 +71,27 @@ METRICS_ENABLED=true
 # Security Configuration
 MAX_REQUEST_SIZE=10485760
 REQUEST_TIMEOUT=30
+
+
+# Redis Configuration - Updated for proper integration
+
+# Rate limiting settings to ensure Redis usage
+
+
+# Redis Debug Configuration
+# Redis Debug Configuration - Forces Redis Usage
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_REDIS_URL=redis://localhost:6379/1
+RATE_LIMIT_FALLBACK_TO_MEMORY=false
+
+# VERY aggressive rate limits to force Redis usage
+RATE_LIMIT_AUTH_REQUESTS=2
+RATE_LIMIT_TRADING_REQUESTS=3
+RATE_LIMIT_INFO_REQUESTS=5
+RATE_LIMIT_ADMIN_REQUESTS=1
+RATE_LIMIT_REQUESTS_PER_MINUTE=8
+
+# Disable fallback to force Redis usage
+RATE_LIMIT_SLIDING_WINDOW=true
+RATE_LIMIT_BURST_PROTECTION=false
+RATE_LIMIT_ADMIN_BYPASS=false
