Trading API Routes

--- a/fastapi_backend/.env.example
+++ b/fastapi_backend/.env.example
@@ -15,3 +15,8 @@ RATE_LIMIT_WINDOW=60
 
 # Logging
 LOG_LEVEL=INFO
+
+# Spread Configuration
+DEFAULT_SPREAD_PERCENTAGE=0.02  # 2% default spread
+MAX_SPREAD_PERCENTAGE=0.10      # 10% maximum spread
+MIN_SPREAD_PERCENTAGE=0.00      # 0% minimum spread
