--- a/fastapi_backend/.env.example
+++ b/fastapi_backend/.env.example
@@ -20,3 +20,17 @@ LOG_LEVEL=INFO
 DEFAULT_SPREAD_PERCENTAGE=0.02  # 2% default spread
 MAX_SPREAD_PERCENTAGE=0.10      # 10% maximum spread
 MIN_SPREAD_PERCENTAGE=0.00      # 0% minimum spread
+
+# Kraken API Configuration
+KRAKEN_API_KEY=your_kraken_api_key_here
+KRAKEN_API_SECRET=your_kraken_api_secret_here
+
+# Trading Configuration
+ENABLE_LIVE_TRADING=false
+MAX_ORDER_SIZE_USD=1000.00
+DEFAULT_TRADING_FEE_PERCENTAGE=0.26
+
+# Market Order Settings
+MARKET_ORDER_SLIPPAGE_TOLERANCE=0.01
+KRAKEN_API_TIMEOUT=30
+
