--- a/fastapi_backend/.env
+++ b/fastapi_backend/.env
@@ -31,7 +31,7 @@ PROJECT_NAME=Balance Tracking System - Development
 VERSION=1.0.0-dev
 
 # CORS (Permissive for development)
-CORS_ORIGINS=http://localhost:3000,http://localhost:8080,http://127.0.0.1:3000
+CORS_ORIGINS=https://api.montgomery-tech.net,http://api.montgomery-tech.net
 CORS_ALLOW_CREDENTIALS=true
 
 # ===== RATE LIMITING - DEVELOPMENT FRIENDLY CONFIGURATION =====
@@ -113,3 +113,6 @@ USE_MOCK_PRICES=false
 # Logging
 LOG_KRAKEN_REQUESTS=true
 LOG_KRAKEN_RESPONSES=true
+
+ALLOWED_HOSTS=api.montgomery-tech.net,localhost,127.0.0.1
+
