--- a/fastapi_backend/.env
+++ b/fastapi_backend/.env
@@ -1,3 +1,3 @@
+# Database Configuration - PostgreSQL
 DATABASE_URL=postgresql://garrettroth@localhost:5432/balance_tracker
 DATABASE_TYPE=postgresql
-SECRET_KEY=eKup7IFZB6VqZ7kcyippU9FpQm7pFKfe
